updated all links

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Fundamental and Design Principle</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
    <div class="nav-cont">
     <div class="nav-head">
-        <h3>Tobio</h3>
+        <h3>Portfolio</h3>
     </div>
     <div class="nav-list">
         <a href="./index.html" class="list">Home</a>
@@ -20,7 +20,7 @@
         <a href="./contact.html" class="contact">Contact</a>
     </div>
     <div class="action-btn">
-        <button>Hire me</button>
+        <button>Hire Me</button>
     </div>
    </div>
    <main>
@@ -35,10 +35,10 @@
                 <p>Hi i am Sujal Kumar,a passionate react Developer Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, asperiores?</p>
             </div>
             <div class="icon-cont ">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
+                <a href="https://www.facebook.com/profile.php?id=100008287490149" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/sujal-kumar-528984227/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/_noya.san/"target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://github.com/Sujal-Kr" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
         <div class="side-image-cont">
