--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="nav-cont">
         <div class="nav-head">
-            <h3>Tobio</h3>
+            <h3>Portfolio</h3>
         </div>
         <div class="nav-list">
             <a href="./index.html" class="list">Home</a>
