--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="nav-cont">
         <div class="nav-head">
-            <h3>Tobio</h3>
+            <h3>Portfolio</h3>
         </div>
         <div class="nav-list">
             <a href="./index.html" class="list">Home</a>
@@ -33,7 +33,7 @@
                 <div class="project">
                     <img src="./camp.png" alt="">
                     <div class="content">
-                        <h1 class="name  ">Campus Bites</h1>
+                        <h1 class="name  "><a href="https://wondrous-strudel-7a7820.netlify.app/" target="_blank">Campus Bites</a></h1>
                         <div class="tools">
                             <div class="tool">React</div>
                             <div class="tool">Tailwind</div>
@@ -45,7 +45,7 @@
                 <div class="project">
                     <img src="./port.png" alt="">
                     <div class="content">
-                        <h1 class="name  ">Portfolio</h1>
+                        <h1 class="name  "><a href="https://portfolio-sujal-kr.vercel.app/" target="_blank">Portfolio</a></h1>
                         <div class="tools">
                             <div class="tool">React</div>
                             <div class="tool">Tailwind</div>
@@ -55,7 +55,7 @@
                 <div class="project">
                     <img src="./netflix.png" alt="">
                     <div class="content">
-                        <h1 class="name  ">Netflix</h1>
+                        <h1 class="name  "><a href="https://netflix-seven-plum.vercel.app/" target="_blank">Netflix</a></h1>
                         <div class="tools">
                             <div class="tool">Next js</div>
                             <div class="tool">Tailwind</div>
@@ -66,7 +66,7 @@
                 <div class="project">
                     <img src="./eye.png" alt="">
                     <div class="content">
-                        <h1 class="name  ">Eye Hospital</h1>
+                        <h1 class="name  "><a href="https://poetic-pasca-1d56bc.netlify.app/" target="_blank">Eye Hospital</a></h1>
                         <div class="tools">
                             <div class="tool">React</div>
                             <div class="tool">Tailwind</div>
