--- a/service.html
+++ b/service.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <div class="nav-cont">
         <div class="nav-head">
-            <h3>Tobio</h3>
+            <h3>Portfolio</h3>
         </div>
         <div class="nav-list">
             <a href="./index.html" class="list">Home</a>
